# fish-s2pro

./: .gitignore  Cargo.toml  README.md  README.zh-TW.md
crates/fish_s2_core/: Cargo.toml
crates/fish_s2_core/src/: config.rs  convert.rs  error.rs  gguf.rs  lib.rs  models.rs  paths.rs  server.rs  tags.rs  tts.rs  voice.rs
crates/fish_s2_gui/: Cargo.toml
crates/fish_s2_gui/src/: app.rs  audio.rs  main.rs
crates/fish_s2_infer/: Cargo.toml  build.rs
crates/fish_s2_infer/ffi/: s2_engine_ffi.cpp  s2_engine_ffi.h
crates/fish_s2_infer/src/: attention.rs  backend.rs  codec.rs  engine.rs  error.rs  fast_ar.rs  generate.rs  lib.rs  paths.rs  pipeline.rs  prompt.rs  registry.rs  sampling.rs  server.rs  slow_ar.rs  tensor.rs  tokenizer.rs  tokenizer_s2cpp.rs  wav.rs
crates/fish_s2_infer/tests/fixtures/: tokenizer_golden.tsv
crates/fish_s2_parity/: Cargo.toml
crates/fish_s2_parity/src/: lib.rs
crates/fish_s2_parity/tests/fixtures/: README.md  prompts.txt  reference.txt  reference_prompt_codes.json
docs/: PURE_RUST_DUAL_AR_TODO.md  S2_CPP_PIN.md  S2_PRO_CODEC_REGISTRY.md  S2_PRO_GGUF_TENSOR_DUMP.md  S2_PRO_TRANSFORMER_REGISTRY.md  THIRD_PARTY_NOTICES.md
models/: README.txt
scripts/: Use-UnicodeEncoding.ps1  build_s2_native.ps1  check_cuda_compat.ps1  convert_s2_pro_gguf.ps1  download_models.ps1  dump_decode_stage_parity.ps1  dump_e2e_wav_parity.ps1  dump_encoder_stage_parity.ps1  dump_fast_ar_parity.ps1  dump_generated_codes_parity.ps1  dump_post_module_parity.ps1  dump_reference_generated_codes_parity.ps1  dump_rvq_lookup_parity.ps1  dump_s2cpp_slow_ar_stats.ps1  dump_semantic_parity.ps1  dump_waveform_parity.ps1  package_mvp.ps1  parity_run_s2cpp.ps1  smoke_rust_server.ps1  verify_mvp.ps1
