[workspace]
resolver = "2"
members = [
    "crates/fish_s2_core",
    "crates/fish_s2_infer",
    "crates/fish_s2_gui",
    "crates/fish_s2_parity",
]
default-members = ["crates/fish_s2_gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["fish-s2pro"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
