[package]
name = "fish_s2_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fish Audio S2 Pro — GGUF, server, and TTS client core"

[features]
default = []
# Enables the blocking HTTP TTS client. Keep this off for native-dependency-free
# default builds because reqwest/rustls pulls ring.
http-client = ["dep:reqwest"]
# Enables the legacy external bin/s2.exe server process helpers.
legacy-s2-exe = []

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, optional = true }
directories.workspace = true
chrono.workspace = true
uuid.workspace = true
byteorder = "1"
walkdir = "2"
